--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
 				aria-expanded="false" aria-controls="navbar"><i></i></a>
 			<aside id="colorlib-aside" role="complementary" class="border js-fullheight">
 				<div class="text-center">
-					<div class="author-img" style="background-image: url(C:/Users/hp/OneDrive/Documents/MDS23_25_StudentProfile/MDS23_25_StudentProfile/images/2348330.JPG);"></div>
+					<div class="author-img" style="background-image: url(images/2348330.JPG);"></div>
 					<!-- Add your name -->
 					<h1 id="colorlib-logo"><a href="index.html">John Jerry</a></h1>
 					<span class="position"><a
