--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
 				aria-expanded="false" aria-controls="navbar"><i></i></a>
 			<aside id="colorlib-aside" role="complementary" class="border js-fullheight">
 				<div class="text-center">
-					<div class="author-img" style="background-image: url(images/2348330.JPG);"></div>
+					<div class="author-img" style="background-image: url(C:/Users/hp/OneDrive/Documents/MDS23_25_StudentProfile/MDS23_25_StudentProfile/images/2348330.JPG);"></div>
 					<!-- Add your name -->
 					<h1 id="colorlib-logo"><a href="index.html">John Jerry</a></h1>
 					<span class="position"><a
@@ -208,24 +208,23 @@
 									<div class="desc">
 										<!-- Edit content for your specialization -->
 										<h3>Data Analytics</h3>
-										<p>Tableau | Power BI | Excel | Python</p>
+										<p> Python | Tableau | Power BI | Excel</p>
 									</div>
 								</div>
 							</div>
 
-							<!-- Remove this div if you have only two specialization -->
 							<div class="col-md-4 text-center animate-box">
 								<div class="services color-3">
 									<span class="icon">
-										<i class="icon-point-of-interest"></i>
+										<i class="icon-chart-bar"></i>
 									</span>
 									<div class="desc">
-										<!-- Edit content for your specialization -->
-										<h3>Domain Expertise</h3>
-										<p>Finance Domain</p>
+										<h3>Statistics</h3>
+										<p>Descriptive Statistics | Hypothesis Testing | Regression Analysis</p>
 									</div>
 								</div>
 							</div>
+							
 
 				</section>
 
@@ -257,7 +256,7 @@
 
 							<div class="col-md-6 animate-box" data-animate-effect="fadeInRight">
 								<div class="progress-wrap">
-									<h3>C++</h3>
+									<h3>Python</h3>
 									<div class="progress">
 										<div class="progress-bar color-2" role="progressbar" aria-valuenow="80%"
 											aria-valuemin="0" aria-valuemax="100" style="width:80%">
@@ -269,7 +268,7 @@
 
 							<div class="col-md-6 animate-box" data-animate-effect="fadeInLeft">
 								<div class="progress-wrap">
-									<h3>Microsoft SQL</h3>
+									<h3>SQL (Structured Query Language)</h3>
 									<div class="progress">
 										<div class="progress-bar color-3" role="progressbar" aria-valuenow="85"
 											aria-valuemin="0" aria-valuemax="100" style="width:85%">
@@ -281,11 +280,11 @@
 
 							<div class="col-md-6 animate-box" data-animate-effect="fadeInRight">
 								<div class="progress-wrap">
-									<h3>Python</h3>
+									<h3>R Programming</h3>
 									<div class="progress">
 										<div class="progress-bar color-4" role="progressbar" aria-valuenow="90"
 											aria-valuemin="0" aria-valuemax="100" style="width:90%">
-											<span>90%</span>
+											<span>76%</span>
 										</div>
 									</div>
 								</div>
@@ -303,17 +302,6 @@
 								</div>
 							</div>
 
-							<div class="col-md-6 animate-box" data-animate-effect="fadeInLeft">
-								<div class="progress-wrap">
-									<h3>R Programming</h3>
-									<div class="progress">
-										<div class="progress-bar color-1" role="progressbar" aria-valuenow="75"
-											aria-valuemin="0" aria-valuemax="100" style="width:75%">
-											<span>75%</span>
-										</div>
-									</div>
-								</div>
-							</div>
 
 							<div class="col-md-6 animate-box" data-animate-effect="fadeInLeft">
 								<div class="progress-wrap">
@@ -321,7 +309,7 @@
 									<div class="progress">
 										<div class="progress-bar color-2" role="progressbar" aria-valuenow="95"
 											aria-valuemin="0" aria-valuemax="100" style="width:95%">
-											<span>95%</span>
+											<span>82%</span>
 										</div>
 									</div>
 								</div>
@@ -333,7 +321,7 @@
 									<div class="progress">
 										<div class="progress-bar color-2" role="progressbar" aria-valuenow="82"
 											aria-valuemin="0" aria-valuemax="100" style="width:82%">
-											<span>82%</span>
+											<span>85%</span>
 										</div>
 									</div>
 								</div>
@@ -341,11 +329,23 @@
 
 							<div class="col-md-6 animate-box" data-animate-effect="fadeInLeft">
 								<div class="progress-wrap">
-									<h3>python</h3>
+									<h3>Machine Learning</h3>
 									<div class="progress">
 										<div class="progress-bar color-1" role="progressbar" aria-valuenow="35"
 											aria-valuemin="0" aria-valuemax="100" style="width:35%">
-											<span>35%(learning)</span>
+											<span>73%</span>
+										</div>
+									</div>
+								</div>
+							</div>
+
+							<div class="col-md-6 animate-box" data-animate-effect="fadeInLeft">
+								<div class="progress-wrap">
+									<h3>NLP</h3>
+									<div class="progress">
+										<div class="progress-bar color-1" role="progressbar" aria-valuenow="75"
+											aria-valuemin="0" aria-valuemax="100" style="width:75%">
+											<span>38% - Learning</span>
 										</div>
 									</div>
 								</div>
@@ -353,11 +353,11 @@
 
 							<div class="col-md-6 animate-box" data-animate-effect="fadeInRight">
 								<div class="progress-wrap">
-									<h3>ALP</h3>
+									<h3>Deep Learning</h3>
 									<div class="progress">
 										<div class="progress-bar color-6" role="progressbar" aria-valuenow="80"
 											aria-valuemin="0" aria-valuemax="100" style="width:80%">
-											<span>80%</span>
+											<span>50% - Learning</span>
 										</div>
 									</div>
 								</div>
@@ -438,7 +438,7 @@
 												<div id="collapseFive" class="panel-collapse collapse" role="tabpanel"
 													aria-labelledby="headingFive">
 													<div class="panel-body">
-														<p>I completed my 10th grade education at <strong> Indiranagar High School</strong> with a percentage of 76%.</p>
+														<p>I completed my 10th grade education at <strong> Indiranagar High School</strong> with a percentage of 76.</p>
 													</div>
 												</div>
 											</div>
@@ -472,9 +472,10 @@
 										<!-- Edit content for your specialization -->
 										<h3>
 											Traffic Sign Recognition On Real-Time Video Using Convolutional Neural Network</h3>
-											<p>Developed a real-time Traffic Sign Recognition system using CNNs to detect and classify signs in dynamic camera feeds.</p>
-											<p>Overcame challenges such as variable sign appearances, real-time processing demands, and environmental factors like lighting and occlusions.</p>
-											<p>Implemented solutions like data augmentation, optimized CNN architectures, and real-time video processing to enhance driver safety and facilitate autonomous vehicle navigation.</p>										<p id="project-tool">Python | Tensorflow | Opencv </p>
+											<p>Developed a real-time system for detecting and classifying traffic signs with CNNs.</p>
+											<p>Overcame challenges like variable appearances and real-time processing.</p>
+											<p>Used data augmentation, optimized CNNs, and real-time video processing for enhanced driver safety.</p>		
+											<p id="project-tool">Python | Tensorflow | Opencv </p>
 									</div>
 								</div>
 							</div>
@@ -490,15 +491,15 @@
 									<div class="desc">
 										<!-- Edit content for your specialization -->
 										<h3>Fake News Detection System Using NLP and Classification Algorithm</h3>
-										 <p>Developed a machine learning model using NLP to classify fake and real news articles, employing a Passive-Aggressive classifier.</p>
-                                         <p>Overcame challenges with inconsistent raw text data through extensive preprocessing, addressing variations in cases, punctuation, numbers, and stop words.</p>
-                                         <p>Selected the Passive-Aggressive Classifier for its efficiency in binary classification after rigorous model experimentation and enhanced preprocessing techniques.</p>
+										<p>Developed an NLP model to classify fake and real news using a Passive-Aggressive classifier.</p>
+										<p>Addressed raw text inconsistencies with extensive preprocessing.</p>
+										<p>Chose the Passive-Aggressive Classifier for its binary classification efficiency.</p>
 										<p id="project-tool">Python | NLP | Passive-Aggressive Algorithm </p>
 									</div>
 								</div>
 							</div>
 
-							<!-- Remove this div if you have only two specialization  -->
+							<!-- Remove this div if you have only two specialization
 							<div class="col-md-4 text-center animate-box">
 								<div class="services color-3">
 									<a href="https://github.com/JohnJerry0010" target="_blank">
@@ -506,15 +507,15 @@
 											<i class="icon-github"></i>
 										</span>
 									</a>
-									<div class="desc">
-										<!-- Edit content for your specialization -->
+									<div class="desc">  -->
+										<!-- Edit content for your specialization 
 										<h3>Wine Type Classification Using XGBoost</h3>
 										<p>This project contains comparision of Deep Learning Models which are CNN,
 											ResNet50 and VGG16.</p>
 										<p id="project-tool">Python | XGBoost</p>
 									</div>
 								</div>
-							</div>  
+							</div>  -->
 
 				</section>
 
@@ -541,7 +542,7 @@
 											<div class="timeline-label" , style="background: #e5edf4;">
 												<h2><a href="#">Prodigy InfoTech</a> <span> </span></h2>
 												<p id="project-tool">[Feb, 2024 - Mar, 2024]</p>
-												<p>During my one-month virtual internship at Prodigy InfoTech, I had the opportunity to focus on tasks aligned with my specialization in data science. I was assigned five challenging tasks that required applying data analysis and machine learning techniques to real-world problems. These tasks included data cleaning and preprocessing, exploratory data analysis, building predictive models, and presenting insights through clear and informative reports. The internship provided valuable hands-on experience in applying theoretical knowledge to practical scenarios, enhancing my skills in data-driven decision-making and problem-solving within a professional setting.</p>
+												<p>During my one-month virtual internship at Prodigy InfoTech, I focused on tasks aligned with my data science specialization. I handled five challenging assignments involving data cleaning, exploratory analysis, building predictive models, and presenting insights through clear reports. This experience enhanced my practical skills in applying data-driven decision-making and problem-solving in professional settings.</p>
 												<p id="project-tool">Python | Machine Learning | Pipeline</p>
 											</div>
 										</div>
