--- a/index.html
+++ b/index.html
@@ -122,7 +122,7 @@
 								<div class="row">
 									<div class="col-md-3 animate-box" data-animate-effect="fadeInLeft">
 										<!-- Edit google drive Link -->
-										<a href="https://drive.google.com/file/d/1SX7jN4HIJxLgfge7py6N2PZl7LCwxcq2/view?usp=drive_link"
+										<a href="https://drive.google.com/file/d/1W_1mbpRmcFxMvfYgHei-hI0aovH_DqZb/view?usp=sharing"
 											target="_blank">
 											<div class="services color-4">
 												<span class="icon2">
